--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -7,7 +7,7 @@ header {
   align-items: center;
   justify-content: space-between;
   min-height: 60px;
-  z-index: 999;
+  z-index: 80;
   transition: top 0.3s ease-in-out;
   padding: 16px 26px;
   @media screen and (min-width: 576px) {
